--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+<!--        手动添加jaxb-api 防止 javax.xml.bind.DatatypeConverter 在java 9 以上版本找不到-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
